# Templates-ISO-IEC

./: .gitignore  CMakeLists.txt  README.md  run.sh
17.1/: readme.md
17.5/: readme.md
17.9/: readme.md
pre/: 4_main.cpp  4_unit_a.cpp  4_unit_b.cpp  CMakeLists.txt  readme.md
pre/4/: 4_unit_a.cpp  4_unit_b.cpp  CMakeLists.txt
pre/7/: CMakeLists.txt  func.cpp  main.cpp  template.h
